[package]
name = "rust-qrweb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qr = { path = '../qr', features = ["serde", "rayon"] }
actix-web = "3"
actix-files = "^0.5"
serde = "^1.0"
serde_json = "^1.0"